--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.11",
+    "@coinbase/agentkit": "^0.6.2",
+    "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@coinbase/onchainkit": "^0.38.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.0",
+    "ai": "^4.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
