--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@coinbase/onchainkit": "^0.38.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.0",
+    "add": "^2.0.6",
     "ai": "^4.3.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.7.3",
+    "lenis": "^1.2.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
