--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@coinbase/onchainkit": "^0.38.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@tanstack/react-query": "^5.74.0",
+    "@tiptap/extension-placeholder": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "add": "^2.0.6",
     "ai": "^4.3.6",
     "class-variance-authority": "^0.7.1",
