--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/google": "^1.2.11",
     "@coinbase/agentkit": "^0.6.2",
     "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
