--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "tw-animate-css": "^1.2.5",
     "viem": "2.x",
     "wagmi": "^2.14.16",
+    "zod": "^3.24.3",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
