--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@coinbase/onchainkit": "^0.38.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@react-three/drei": "^10.0.7",
+    "@react-three/fiber": "^9.1.2",
     "@tanstack/react-query": "^5.74.0",
     "@tiptap/extension-placeholder": "^2.11.7",
     "@tiptap/react": "^2.11.7",
@@ -34,6 +36,7 @@
     "react-dom": "^19.0.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "three": "^0.176.0",
     "tw-animate-css": "^1.2.5",
     "viem": "2.x",
     "wagmi": "^2.14.16",
