--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
+    "@react-three/postprocessing": "^3.0.4",
     "@tanstack/react-query": "^5.74.0",
     "@tiptap/extension-placeholder": "^2.11.7",
     "@tiptap/react": "^2.11.7",
@@ -27,6 +28,7 @@
     "clsx": "^2.1.1",
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.7.3",
+    "lamina": "^1.1.23",
     "lenis": "^1.2.3",
     "lucide-react": "^0.487.0",
     "next": "15.3.0",
