--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@coinbase/agentkit": "^0.6.2",
     "@coinbase/agentkit-vercel-ai-sdk": "^0.1.0",
     "@coinbase/onchainkit": "^0.38.7",
+    "@phosphor-icons/react": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.0",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
